--- a/website/templates/website/view.html
+++ b/website/templates/website/view.html
@@ -1,1 +1,28 @@
-view page: {{ inbox_id }}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>WebHook Inbox Viewer</title>
+    <link href="/static/styles/WebHookInboxViewer.css" rel="stylesheet" />
+    <!--[if lte IE 8]>
+    <script src="/static/scripts/json2.js"></script>
+    <![endif]-->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
+    <script src="/static/scripts/pollymer-1.0.0.js"></script>
+    <script src="/static/scripts/WebHookInboxViewer.config.js"></script>
+    <script src="/static/scripts/WebHookInboxViewer.js"></script>
+    <script>
+        window.serverData = { webhookId: "{{ inbox_id }}" };
+    </script>
+</head>
+<body>
+<div class="other">
+    <a href="/docs">API</a>
+    <a href="/about">About</a>
+    <a href="/contact">Contact</a>
+</div>
+
+<div ng-app="WebHookInboxViewer" ng-controller="WebHookInboxCtrl" ng-include="'/static/templates/view-template.html'">
+</div>
+
+</body>
+</html>
