--- a/website/static/templates/view-template.html
+++ b/website/static/templates/view-template.html
@@ -1,48 +1,85 @@
-<div class="location">
-    <div>
-        <a href="/">Home Page</a>
+<div class="target container">
+    <div class="target-info" ng-show="webHookEndpoint.length > 0">
+        <div class="label">
+            INBOX TARGET URL:
+        </div>
+        <div class="url">
+            <a href="{{webHookEndpoint}}" target="_blank">{{webHookEndpoint}}</a>
+        </div>
     </div>
-
-    <div ng-show="webHookEndpoint.length > 0">
-        Current Webhook Endpoint: <a href="{{webHookEndpoint}}" target="_blank">{{webHookEndpoint}}</a>
-
-        <button class="btn btn-mini btn-danger" ng-click="delete()"><i class="icon-trash icon-white"></i> Delete</button>
+    <!--
+    <div class="target-copy" ng-show="webHookEndpoint.length > 0">
+        <button ng-click="copy()">copy to clipboard</button>
     </div>
+    -->
+    <!--
+    <div class="target-autoupdates">
+        <div class="label">
+            <a href="#" ng-click="toggleAuto()">turn {{ autoUpdatesEnabled ? "OFF" : "ON" }} auto updates</a>
+        </div>
+        <div class="count">
+            {{ updatesCount }}
+        </div>
+    </div>
+    -->
 </div>
 
 <div ng-show="!inbox.error">
-    <div ng-show="inbox.pollingUpdates">
-        Listening for updates...
-    </div>
-
     <div ng-show="inbox.entries.length > 0">
         <div ng-repeat="entry in inbox.entries" ng-animate=" 'entry-animate' " class="inbox-entry">
-            <div class="entry-id">Id: {{entry.id}}</div>
-            <div class="entry-main">
-                <div class="entry-method">{{entry.method}}</div>
-                <div class="entry-path">{{entry.path}}</div>
+            <div class="entry-label container">
+                <div class="entry-main">
+                    <div class="entry-method">{{entry.method}}</div>
+                    <div class="entry-path">{{entry.path}}</div>
+                </div>
+                <div class="entry-id">ID: {{entry.id}}</div>
             </div>
-            <div class="entry-body">
-                <div class="entry-type-item" ng-show="entry.type">
-                    <div class="entry-key">Type:</div>
-                    <div class="entry-value">{{entry.type}}</div>
-                </div>
-                <div class="entry-type-query" ng-show="entry.query">
-                    <div class="entry-key">Query:</div>
-                    <div class="entry-value">{{entry.query}}</div>
-                </div>
-                <div class="entry-type-body" ng-show="entry.body">
-                    <div class="entry-key">Body:</div>
-                    <div class="entry-value">{{entry.body}}</div>
-                </div>
-            </div>
-            <div ng-show="entry.headers.length > 0" class="entry-headers">
-                <div ng-repeat="header in entry.headers" class="entry-header-item">
-                    <div class="entry-key">
-                        {{header[0]}}
+            <div class="entry-content container">
+                <div class="entry-meta">
+                    <div class="entry-item">
+                        <div class="label">
+                            DATE AND TIME
+                        </div>
+                        <div class="value">
+                            {{entry.dateTime | date:"MM / dd / yyyy 'at' h:mm a"}}
+                        </div>
                     </div>
-                    <div class="entry-value">
-                        {{header[1]}}
+                    <div class="entry-item">
+                        <div class="label">
+                            IP ADDRESS OF REQUEST
+                        </div>
+                        <div class="value">
+                            {{entry.ip_address}}
+                        </div>
+                    </div>
+                </div>
+                <div class="entry-body">
+                    <div class="entry-inner-body">
+                        <!--
+                        <div class="entry-item" ng-show="entry.type">
+                            <div class="label">Type:</div>
+                            <div class="value">{{entry.type}}</div>
+                        </div>
+                        -->
+                        <div class="entry-item" ng-show="entry.body">
+                            <div class="label">POST CONTENT:</div>
+                            <div class="value">{{entry.body}}</div>
+                        </div>
+                        <div class="entry-item" ng-show="entry.query">
+                            <div class="label">QUERY:</div>
+                            <div class="value">{{entry.query}}</div>
+                        </div>
+                        <div ng-show="entry.headers.length > 0" class="entry-item">
+                            <div class="label">HEADERS:</div>
+                            <div ng-repeat="header in entry.headers" class="value">
+                                <div class="item-label">
+                                    {{header[0]}}
+                                </div>
+                                <div class="item-value">
+                                    {{header[1]}}
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -57,8 +94,12 @@
         The inbox is empty.
     </div>
 
-    <div ng-show="!inbox.fetching && inbox.historyCursor != null && inbox.historyCursor >= 0">
-        <button ng-click="history()" class="btn btn-mini">Show past entries</button>
+    <div ng-show="!inbox.fetching && inbox.historyCursor != null && inbox.historyCursor >= 0" class="entry-history container">
+        <div class="darr-l">v</div>
+        <div class="darr-r">v</div>
+        <div class="show-more">
+            <a href="#" ng-click="history()" class="btn btn-mini">show more</a>
+        </div>
     </div>
 </div>
 
