inbox URL is now computed from endpoint plus "in/" suffix

--- a/website/static/templates/view-template.html
+++ b/website/static/templates/view-template.html
@@ -4,7 +4,7 @@
             INBOX TARGET URL:
         </div>
         <div class="url">
-            <a href="{{webHookEndpoint}}" target="_blank">{{webHookEndpoint}}</a>
+            <a href="{{webHookInboxUrl()}}" target="_blank">{{webHookInboxUrl()}}</a>
         </div>
     </div>
     <!--
