Showing "type" field

--- a/website/static/templates/view-template.html
+++ b/website/static/templates/view-template.html
@@ -55,12 +55,10 @@
                 </div>
                 <div class="entry-body">
                     <div class="entry-inner-body">
-                        <!--
                         <div class="entry-item" ng-show="entry.type">
-                            <div class="label">Type:</div>
+                            <div class="label">TYPE:</div>
                             <div class="value">{{entry.type}}</div>
                         </div>
-                        -->
                         <div class="entry-item" ng-show="entry.body">
                             <div class="label">POST CONTENT:</div>
                             <div class="value">{{entry.body}}</div>
