--- a/website/templates/website/view.html
+++ b/website/templates/website/view.html
@@ -17,12 +17,16 @@
 <body>
 
 <div class="wi-viewer">
-
 <div class="header container">
-    <div class="links">
-        <a href="/docs">API</a>
-        <a href="/about">About</a>
-        <a href="/contact">Contact</a>
+    <div class="row">
+        <div class="logo">
+            <a href="/"><img src="/static/images/logo.png" /></a>
+        </div>
+        <div class="links">
+            <a href="/docs">API</a>
+            <a href="/about">About</a>
+            <a href="/contact">Contact</a>
+        </div>
     </div>
 </div>
 
