--- a/website/static/templates/view-template.html
+++ b/website/static/templates/view-template.html
@@ -1,24 +1,28 @@
 <div class="target container">
-    <div class="target-info" ng-show="webHookEndpoint.length > 0">
-        <div class="label">
-            INBOX TARGET URL:
+    <div class="row">
+        <div class="target-info" ng-show="webHookEndpoint.length > 0">
+            <div class="label">
+                INBOX TARGET URL:
+            </div>
+            <div class="url">
+                <a href="{{webHookInboxUrl()}}" target="_blank">{{webHookInboxUrl()}}</a>
+            </div>
         </div>
-        <div class="url">
-            <a href="{{webHookInboxUrl()}}" target="_blank">{{webHookInboxUrl()}}</a>
+        <!--
+        <div class="target-copy" ng-show="webHookEndpoint.length > 0">
+            <button ng-click="copy()">copy to clipboard</button>
         </div>
-    </div>
-    <!--
-    <div class="target-copy" ng-show="webHookEndpoint.length > 0">
-        <button ng-click="copy()">copy to clipboard</button>
-    </div>
-    -->
-    <div class="target-autoupdates">
-        <div class="label">
-            <a href="#" ng-click="toggleAuto()">turn {{ inbox.liveUpdates ? "OFF" : "ON" }} auto updates</a>
+        -->
+        <div class="target-autoupdates">
+            <div class="label" ng-click="toggleAuto()">
+                turn {{ inbox.liveUpdates ? "OFF" : "ON" }} auto updates
+            </div>
+            <div class="count" ng-show="inbox.pendingEntries.length > 0" class="count" ng-click="flushPendingEntries()">
+                <div class="count-inner">
+                    {{ inbox.pendingEntries.length }}
+                </div>
+            </div>
         </div>
-        <a href="#" ng-show="inbox.pendingEntries.length > 0" class="count" ng-click="flushPendingEntries()">
-            {{ inbox.pendingEntries.length }}
-        </a>
     </div>
 </div>
 
