--- a/website/templates/website/view.html
+++ b/website/templates/website/view.html
@@ -34,8 +34,10 @@
 </div>
 
 <div class="footer container">
-    <div class="message">
-        Inspired by Requestbin, &copy;2013 Fanout, Inc.
+    <div class="row">
+        <div class="message">
+            Inspired by Requestbin, &copy;2013 Fanout, Inc.
+        </div>
     </div>
 </div>
 
