--- a/website/static/templates/view-template.html
+++ b/website/static/templates/view-template.html
@@ -86,12 +86,20 @@
         </div>
     </div>
 
-    <div ng-show="inbox.fetching">
-        Checking inbox...
+    <div ng-show="inbox.fetching" class="status container">
+        <div class="row">
+            <div class="status-message">
+                <img src="/static/images/ajax-loader.gif" /> Checking inbox...
+            </div>
+        </div>
     </div>
 
-    <div ng-show="!inbox.fetching && inbox.entries.length == 0">
-        The inbox is empty.
+    <div ng-show="!inbox.fetching && inbox.entries.length == 0" class="status container">
+        <div class="row">
+            <div class="status-message">
+                The inbox is empty.
+            </div>
+        </div>
     </div>
 
     <div ng-show="!inbox.fetching && inbox.historyCursor != null && inbox.historyCursor >= 0" class="entry-history container" ng-click="history()">
@@ -103,11 +111,15 @@
     </div>
 </div>
 
-<div ng-show="inbox.error">
-    <div>
-        There has been an error with the inbox.  It probably does not exist.
-    </div>
-    <div>
-        Enter a different inbox ID, or <a href="/">return to the home page</a> to create a new inbox.
+<div ng-show="inbox.error" class="error container">
+    <div class="row">
+        <div class="error-message">
+            <div>
+                There has been an error with the inbox.  It probably does not exist.
+            </div>
+            <div>
+                <a href="/">Return to the home page</a> to create a new inbox.
+            </div>
+        </div>
     </div>
 </div>
