Added favicon for inbox page

--- a/website/templates/website/view.html
+++ b/website/templates/website/view.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>WebHook Inbox Viewer</title>
+    <link rel="shortcut icon" href="/static/images/favicon.ico" />
     <link href="/static/styles/WebHookInboxViewer.css" rel="stylesheet" />
     <!--[if lte IE 8]>
     <script src="/static/scripts/json2.js"></script>
