--- a/website/static/styles/WebHookInboxViewer.css
+++ b/website/static/styles/WebHookInboxViewer.css
@@ -101,6 +101,10 @@ a {
     text-shadow: 1px 1px #777;
 }
 
+.target-autoupdates .label.label-on {
+    color: white;
+}
+
 .target-autoupdates .count {
     position: absolute;
     top: 10;
@@ -121,6 +125,8 @@ a {
     font-family: Helvetica,Arial;
     font-size: 11px;
     font-weight: normal;
+    text-align: center;
+    min-width: 9px;
 }
 
 .target .target-copy button {
