Made capitalization of "Webhook" consistent across files

--- a/website/static/templates/home-template.html
+++ b/website/static/templates/home-template.html
@@ -1,4 +1,4 @@
-<div>Welcome to WebHookInbox.</div>
+<div>Welcome to WebhookInbox Viewer.</div>
 
 <div ng-show="!error">
     <button ng-click="create()" ng-disabled="creating" class="btn btn-large btn-primary"><i class="icon-inbox icon-white"></i> Create New Inbox</button>
