--- a/website/static/templates/view-template.html
+++ b/website/static/templates/view-template.html
@@ -1,15 +1,15 @@
 <div class="target container">
     <div class="row">
-        <div class="target-info" ng-show="webHookEndpoint.length > 0">
+        <div class="target-info" ng-show="webhookEndpoint.length > 0">
             <div class="label">
                 INBOX TARGET URL:
             </div>
             <div class="url">
-                <a href="{{webHookInboxUrl()}}" target="_blank">{{webHookInboxUrl()}}</a>
+                <a href="{{webhookInboxUrl()}}" target="_blank">{{webhookInboxUrl()}}</a>
             </div>
         </div>
         <!--
-        <div class="target-copy" ng-show="webHookEndpoint.length > 0">
+        <div class="target-copy" ng-show="webhookEndpoint.length > 0">
             <button ng-click="copy()">copy to clipboard</button>
         </div>
         -->
