--- a/website/templates/website/view.html
+++ b/website/templates/website/view.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>WebHook Inbox Viewer</title>
+    <title>WebhookInbox Viewer</title>
     <link rel="shortcut icon" href="/static/images/favicon.ico" />
-    <link href="/static/styles/WebHookInboxViewer.css" rel="stylesheet" />
+    <link href="/static/styles/WebhookInboxViewer.css" rel="stylesheet" />
     <!--[if lte IE 8]>
     <script src="/static/scripts/json2.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
     <script src="/static/scripts/pollymer-1.0.0.js"></script>
-    <script src="/static/scripts/WebHookInboxViewer.config.js"></script>
-    <script src="/static/scripts/WebHookInboxViewer.js"></script>
+    <script src="/static/scripts/WebhookInboxViewer.config.js"></script>
+    <script src="/static/scripts/WebhookInboxViewer.js"></script>
     <script>
         window.serverData = { webhookId: "{{ inbox_id }}" };
     </script>
@@ -31,7 +31,7 @@
     </div>
 </div>
 
-<div ng-app="WebHookInboxViewer" ng-controller="WebHookInboxCtrl" ng-include="'/static/templates/view-template.html'">
+<div ng-app="WebhookInboxViewer" ng-controller="WebhookInboxCtrl" ng-include="'/static/templates/view-template.html'">
 </div>
 
 <div class="footer container">
