Added trailing slash to URLs

--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -14,9 +14,9 @@
 </head>
 <body>
 <div class="other">
-    <a href="/docs">API</a>
-    <a href="/about">About</a>
-    <a href="/contact">Contact</a>
+    <a href="/docs/">API</a>
+    <a href="/about/">About</a>
+    <a href="/contact/">Contact</a>
 </div>
 
 <div ng-app="WebhookInboxViewer" ng-controller="HomeCtrl" ng-include="'/static/templates/home-template.html'">
