--- a/website/templates/website/view.html
+++ b/website/templates/website/view.html
@@ -24,9 +24,9 @@
             <a href="/"><img src="/static/images/logo.png" /></a>
         </div>
         <div class="links">
-            <a href="/docs">API</a>
-            <a href="/about">About</a>
-            <a href="/contact">Contact</a>
+            <a href="/docs/">API</a>
+            <a href="/about/">About</a>
+            <a href="/contact/">Contact</a>
         </div>
     </div>
 </div>
