Added seconds to time template

--- a/website/static/templates/view-template.html
+++ b/website/static/templates/view-template.html
@@ -44,7 +44,7 @@
                             DATE AND TIME
                         </div>
                         <div class="value">
-                            {{entry.dateTime | date:"MM / dd / yyyy 'at' h:mm a"}}
+                            {{entry.dateTime | date:"MM / dd / yyyy 'at' h:mm:ss a"}}
                         </div>
                     </div>
                     <div class="entry-item">
