--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -52,8 +52,8 @@
 
 <div class="footer container">
     <div class="row">
-        <div class="content">
-            Inspired by Requestbin, &nbsp;2013 Fanout, Inc.
+        <div class="message">
+            Inspired by Requestbin, &copy;2013 Fanout, Inc.
         </div>
     </div>
 </div>
