--- a/website/templates/website/about.html
+++ b/website/templates/website/about.html
@@ -1,1 +1,34 @@
-about page
+{% extends "website/l2_base.html" %}
+
+{% block title_suffix %} - About Us{% endblock %}
+
+{% block content %}
+<article>
+    <h1>About Webhook Inbox</h1>
+    <p>
+        Pellentesque eros purus, dapibus sit amet justo ac, luctus venenatis dui.
+        Sed vel leo lectus. Donec tristique, urna a tempor tincidunt, orci mauris
+        varius elit, at commodo leo enim id leo. Etiam congue, metus eget fermentum
+        feugiat, arcu elit lacinia tortor, eget scelerisque eros elit non est.
+    </p>
+    <p>
+        Phasellus nec lectus eros. Curabitur tempor commodo sollicitudin. Integer
+        suscipit aliquet magna eu dapibus. Duis commodo consectetur ligula, sed
+        auctor erat scelerisque a. Curabitur tempus mattis risus eu sagittis. Duis
+        vestibulum tempus mauris non rutrum. Vivamus enim diam, congue et mauris ut,
+        condimentum blandit mauris. Donec quis semper lacus, id ullamcorper dolor.
+        Nullam non mi sapien. Etiam in fringilla erat, vitae interdum urna.
+    </p>
+    <blockquote>
+        &ldquo;Nunc placerat mi massa, quis dignissim urna elementum sed. Nam lacinia
+        sit amet metus vitae rhoncus. Cras eu faucibus mauris. Pellentesque vehicula
+        euismod magna, at tempus eros luctus in. Aenean gravida metus sed odio
+        venenatis.&rdquo;
+    </blockquote>
+    <p>
+        Vestibulum luctus ullamcorper ullamcorper. Morbi sodales dictum erat, vitae
+        ultrices enim faucibus ac. Pellentesque habitant morbi tristique senectus
+        et netus et malesuada fames ac turpis egestas.
+    </p>
+</article>
+{% endblock %}
