--- a/website/static/styles/WebhookInboxViewer.css
+++ b/website/static/styles/WebhookInboxViewer.css
@@ -1,6 +1,8 @@
-html {
+* {
     -webkit-box-sizing:  border-box;
+    -o-box-sizing:  border-box;
     -moz-box-sizing:  border-box;
+    -ms-box-sizing:  border-box;
     box-sizing:  border-box;
 }
 
@@ -34,14 +36,15 @@ a {
 
 .header .logo {
     position: absolute;
-    left: 0;
+    left: 10px;
     top: 25px;
 }
 
 .header .links {
     position: absolute;
-    right: 0;
     top: 31px;
+    right: 0;
+    padding-right: 10px;
     font-size: 11px;
     font-weight: bold;
     text-align: right;
