Home page had been missing favicon link

--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>WebhookInbox Viewer</title>
+    <link rel="shortcut icon" href="/static/images/favicon.ico" />
     <link href="/static/styles/WebhookInbox.css" rel="stylesheet" />
     <!--[if lte IE 8]>
     <script src="/static/scripts/json2.js"></script>
