some text updates

--- a/website/templates/website/l2_base.html
+++ b/website/templates/website/l2_base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>WebhookInbox Viewer{% block title_suffix %}{% endblock %}</title>
+    <title>WebhookInbox{% block title_suffix %}{% endblock %}</title>
     <link rel="shortcut icon" href="/static/images/favicon.ico" />
     <link href="/static/styles/WebhookInbox.css" rel="stylesheet" />
     <!--[if lte IE 8]>
