--- a/website/templates/website/l2_base.html
+++ b/website/templates/website/l2_base.html
@@ -23,7 +23,7 @@
             <a href="/"><img src="/static/images/logo.png" /></a>
         </div>
         <div class="links">
-            <a href="/docs/">API</a>
+            <a href="/docs/api.html">API</a>
             <a href="/about/">About</a>
             <a href="/contact/">Contact</a>
         </div>
@@ -44,7 +44,7 @@
 <div class="footer container fixed-height">
     <div class="row">
         <div class="message">
-            Inspired by Requestbin, &copy;2013 Fanout, Inc.
+            Inspired by <a href="http://requestb.in/">Requestbin</a>, &copy;2013 <a href="http://fanout.io">Fanout, Inc</a>.
         </div>
     </div>
 </div>
