--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>WebhookInbox Viewer</title>
+    <title>WebhookInbox</title>
     <link rel="shortcut icon" href="/static/images/favicon.ico" />
     <link href="/static/styles/WebhookInbox.css" rel="stylesheet" />
     <!--[if lte IE 8]>
@@ -18,7 +18,7 @@
 <div class="header container fixed-height">
     <div class="row">
         <div class="links">
-            <a href="/docs/">API</a>
+            <a href="/docs/api.html">API</a>
             <a href="/about/">About</a>
             <a href="/contact/">Contact</a>
         </div>
@@ -54,7 +54,7 @@
 <div class="footer container fixed-height">
     <div class="row">
         <div class="message">
-            Inspired by Requestbin, &copy;2013 Fanout, Inc.
+            Inspired by <a href="http://requestb.in/">Requestbin</a>, &copy;2013 <a href="http://fanout.io/">Fanout, Inc</a>.
         </div>
     </div>
 </div>
