--- a/website/templates/website/contact.html
+++ b/website/templates/website/contact.html
@@ -6,7 +6,7 @@
 <article>
     <h1>Contact Us</h1>
     <p>
-        WebhookInbox is produced by <a href="http://fanout.io/>Fanout, Inc</a>.
+        WebhookInbox is produced by <a href="http://fanout.io/">Fanout, Inc</a>.
     </p>
     <p>
         Credits
